@@ -1,5 +1,9 @@
 2008-07-09  Pedro Alves  <pedro@codesourcery.com>
 
+	* gdb.base/chng-syms.exp: Don't expect "No symbol ...".
+
+2008-07-09  Pedro Alves  <pedro@codesourcery.com>
+
 	* gdb.base/fullname.exp: Restore pwd if compiling failed.
 
 2008-07-07  Jan Kratochvil  <jan.kratochvil@redhat.com>
